name:           marxup
version:        3.0.0
category:       Text
synopsis:       Markup language preprocessor for Haskell
description:
  Markup syntax preprocessor for Haskell. Steals ideas from the Scribble project (in Scheme).
  The package also provides a DSL to output Latex seamlessly from MarXup output.
license:        GPL
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.8
tested-with:    GHC==6.12.1
tested-with:    GHC==7.4.1
build-type:     Simple

data-files:
     examples/LaTeX.hs


executable marxup
  extensions: FlexibleInstances, TupleSections
  main-is: Main.hs
  build-depends: base>=4.2&&<=5
  build-depends: pretty==1.1.*
  build-depends: parsec==3.*
  build-depends: dlist==0.5.*

executable marxup3
  extensions: FlexibleInstances, TupleSections
  main-is: Main3.hs
  build-depends: configurator>=0.2&&<2
  build-depends: base>=4.2&&<=58
  build-depends: pretty==1.1.*
  build-depends: parsek==1.*
  build-depends: dlist==0.5.*
  
library
  extensions: FlexibleInstances, TypeSynonymInstances, GADTs
  build-depends: base>=4.2&&<5
--  build-depends: pandoc==1.5.*  (support broken)
  build-depends: mtl==2.1.*
  build-depends: labeled-tree==1.*  
  build-depends: filepath==1.3.*  
  build-depends: containers>=0.4 &&<1
  build-depends: process==1.1.*
  build-depends: dvi-processing==0.3.1

  exposed-modules: MarXup
  exposed-modules: MarXup.Tex
  exposed-modules: MarXup.MetaPost
  exposed-modules: MarXup.Latex
  exposed-modules: MarXup.Latex.Math
  exposed-modules: MarXup.Latex.Bib
  exposed-modules: MarXup.Beamer
  exposed-modules: MarXup.DerivationTrees  
  exposed-modules: MarXup.Text
  exposed-modules: MarXup.Diagrams
  exposed-modules: MarXup.MultiRef
--  exposed-modules: MarXup.Pandoc (broken)

